Fix some works div and choose div align prolbem

--- a/stylesheets/3week1.css
+++ b/stylesheets/3week1.css
@@ -53,7 +53,7 @@ h1 { padding-top: 300px; font-size: 30px; text-align: center;  color: white; }
 #search_input { float: left; width: 450px; height: 50px; border-width: 0px; padding: 0px; opacity: 0.3; border-top-left-radius: 5px; border-bottom-left-radius: 5px; }
 #search_button { float: left; height: 50px; width: 120px; background-color: green; border-width: 0px; border-top-right-radius: 8px; border-bottom-right-radius: 8px; font-size: 20px; color: white; }
 
-#works { height: 400px; padding-top: 3px; padding-left: 5%; padding-right: 5%; width: 90%; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: grey; }
+#works { height: 450px; padding-top: 3px; padding-left: 10%; padding-right: 10%; width: 80%; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: grey; }
 
 #works::before { display: block; content:"";  width: 30px; height: 3px; background-color: black; opacity: 0.2;  margin-left: auto; margin-right: auto; }
    
@@ -63,36 +63,44 @@ h1 { padding-top: 300px; font-size: 30px; text-align: center;  color: white; }
 p { margin-top: 30; margin-bottom: 10px; font-size: 20px; font-weight: bold; text-align: center; }
 
 #works ul { width: 100%; height: 250px; }
-#works li h3 { font-size: 18px; text-align: center; margin-top: 5px; margin-bottom: 20px; font-weight: bold; }
+#works li h3 { font-size: 25px; text-align: center; margin-top: 5px; margin-bottom: 20px; font-weight: bold; }
 #works ul li:nth-child(1) div { background-image: url("../assets/compare.png"); background-size: cover; }
 #works ul li:nth-child(2) div { background-image: url("../assets/receive-proposals.png"); background-size: cover; }
 #works ul li:nth-child(3) div { background-image: url("../assets/sell-with-the-best.png"); background-size: cover; }
 #works li p { margin-left: auto; margin-right: auto; }
-.work_item { float: left; padding-top: 50px; width: 33%; height: 250px; }
-.work_pic { width: 80px; height: 80px; }
-.work_para_little { width: 220px; font-size: 15px; font-weight: normal; color: grey }
+.work_item { float: left; box-sizing: border-box;   padding-top: 50px; padding-right: 10%; width: 33%; height: 250px; }
+#works ul li:nth-child(1) { float: left; box-sizing: border-box;   padding-top: 50px; padding-right: 9%; width: 33%; height: 250px; }
+#works ul li:nth-child(2) { float: left; box-sizing: border-box;   padding-right: 4.5%; padding-left: 4.5%; padding-top: 50px;  width: 33%; height: 250px; }
+#works ul li:nth-child(3) { float: left; box-sizing: border-box;   padding-top: 50px; padding-left: 9%; width: 33%; height: 250px; }
 
-#why_choose { height: 800px; padding-top: 30px; padding-left: 100px; padding-right: 100px; border-bottom-width: 2px; border-bottom-style: solid; border-bottom-color: grey; }
+.work_pic { width: 80px; height: 80px; }
+.work_para_little { width: 100%; font-size: 20px; font-weight: normal; color: grey; line-height: 25px; }
+
+#why_choose { height: 800px; padding-top: 60px; padding-left: 10%; padding-right: 10%; border-bottom-width: 2px; border-bottom-style: solid; border-bottom-color: grey; }
 #why_choose h2 { padding-top: 30px; font-size: 20px; font-weight: bold; text-align: center; }
 #why_choose h2::after { display: block; content:"";  width: 30px; height: 3px; background-color: black; opacity: 0.2;  margin-left: auto; margin-right: auto;  margin-top: 8px; margin-bottom: 40px; }
 #why_choose ul li { float: left;  width: 50%; height: 200px; }
-#why_choose ul li div { display: inline-block; width: 30%; height: 42px; }
+#why_choose ul li:nth-child(2n-1) div { display: inline-block; width: 10%; height: 42px; }
+#why_choose ul li:nth-child(2n) div { display: inline-block; width: 35%; height: 42px; }
 #why_choose ul li img { float: right; padding-right: 20px; }
+#why_choose ul li:nth-child(2n) img { float: right; padding-right: 30px; }
 #why_choose ul li h3 { display:inline-block; vertical-align: top; padding-left: 10px; font-weight: bold; font-size: 30px; }
-#why_choose ul li p { margin-left: 30%; padding-left: 10px; width: 50%; text-align: left; font-weight: normal; font-size: 15px;  margin-top: 30px; margin-bottom: 10px; color: grey; } 
+#why_choose ul li:nth-child(2n) h3 { padding-left: 0px; }
+#why_choose ul li p { margin-left: 10%; padding-left: 10px; width: 65%; text-align: left; font-weight: normal; font-size: 20px;  line-height: 25px; margin-top: 30px; margin-bottom: 10px; color: grey; } 
+#why_choose ul li:nth-child(2n) p { float: right; } 
 
-#contact_block { height: 600px; border-bottom-width: 2px; border-bottom-style: solid; border-bottom-color: grey; }
+#contact_block { height: 650px; border-bottom-width: 2px; border-bottom-style: solid; border-bottom-color: grey; }
 #contact_block button:hover { background-color: red; }
 #contact_buttons { width: 30%; height: 50px; padding-top: 100px; margin-bottom: 20px; }
-.contact_btn { float:left; height: 100%; width: 50%; font-size: 15px; border: 1px solid #606779;}
+.contact_btn { float:left; height: 100%; width: 50%; font-size: 20px; border: 1px solid #606779;}
 .contact_btn_color { color: white; background-color: #606779;  } 
 .contact_btn_color_toggle { color: #777C89; background-color: white;  } 
 #contact_slogon::before { display: block; width: 24px; height: 24px;  margin-right: auto; margin-left: auto;  margin-bottom: 20px; content:""; background-image: url("../assets/yinhao.png"); background-size: cover; }
-#contact_slogon { width: 70%; height: 50px; font-weight: normal; }
+#contact_slogon { width: 70%; font-size: 28px; line-height: 33px; font-weight: normal; color: #606779; }
 #contact_slogon::after { display: block; content:"";  width: 30px; height: 3px; background-color: black; opacity: 0.2;  margin-left: auto; margin-right: auto;  margin-top: 8px; }
 
-#ceo_name { margin-top: 70px; font-size: 15px; text-align: center; }
-#ceo_name span { display: block; }
+#ceo_name { margin-top: 50px; font-size: 15px; text-align: center; }
+#ceo_name span { display: block; font-size: 20px; }
 #ceo_name span:nth-child(1) { font-weight: bold; color: #676D7E }
 #ceo_name span:nth-child(2) { margin-top: 5px; font-weight: normal; color: grey }
 
